--- a/Clases/Proyecto Unidad 3/ProyectoUnidad3FrancoN/alumnos/templates/alumnos/index.html
+++ b/Clases/Proyecto Unidad 3/ProyectoUnidad3FrancoN/alumnos/templates/alumnos/index.html
@@ -4,79 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-    (function(){
-        emailjs.init({
-            publicKey: "kJB5UQgcFW8tw7QFb",
-        });
-    })();
-    </script>
-
-    <!--
-        LINK A YOUTUBE
-        https://youtu.be/1kQm2SSD4SY
-    -->
-
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script>
+        $(document).ready(function(){
+            $.ajax({
+                type: "GET",
+                url: "https://mindicador.cl/api",
+                dataType: "json",
+                success: function(data){
+                    var uf = "<h1> UF: "+data.uf.valor+"</h1>";
+                    var bitcoin = "<h1> BITCOIN: " + data.bitcoin.valor+"</h1>";
 
+                    $("#divisas").append(uf);
+                    $("#divisas").append(bitcoin);
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <div>
+       <input type="submit" id="enviar" class="btn-primary" value="Traer Datos">
+    </div>
+    <div id="divisas">
+        
+    </div>
+    <div>
+        <table id="datos" class="table table-bordered" style="border: 1px solid black;">
+            <tr>
+                <th>Nombre</th>
+                <th>Imagen</th>
+                <th>Descripcion</th>
+            </tr>
+        </table>
+    </div>
+
+    <div>
+        <h1>Hola Alumnos en ORM</h1>
+        <br>
+        {% for alumno in alumnos %}
+            {{alumno.rut}}, {{alumno.nombre}}, {{alumno.apellido_paterno}}, {{alumno.apellido_materno}},
+            {{alumno.id_genero.genero}} <br>
+        {% endfor%}
+    </div>
+    <div>
+        <h1>Hola Alumnos en SQL</h1>
+        <br>
+        {% for alumno in alumnos2 %}
+            {{alumno.rut}}, {{alumno.nombre}}, {{alumno.apellido_paterno}}, {{alumno.apellido_materno}},
+            {{alumno.id_genero.genero}} <br>
+        {% endfor%}
+    </div>
     <script>
-        $(document).ready(function(){
-            $("#form").submit(function(event){
-                event.preventDefault();
-                $("#enviar").text("Enviando...");
+        
 
-                const serviceId = "service_5ottxpb";
-                const templateId = "template_1j4af5o";
-
-                emailjs.sendForm(serviceId, templateId, this).then(() => {
-                    $("#enviar").text("Enviar Datos");
-                    alert("Sent!");
-                }).catch((err) => {
-                    $("#enviar").text("Enviar Datos");
-                    alert(JSON.stringify(err));
+        $("#enviar").click(function(){
+            $.get("https://www.themealdb.com/api/json/v1/1/categories.php",
+            function(data){
+                $.each(data.categories, function(i,item){
+                    $("#datos").append("<tr><td>"+item.strCategory+"</td>"+
+                    "<td><img src="+item.strCategoryThumb+"></td>"+
+                    "<td>"+item.strCategoryDescription+"</td></tr>");
                 });
             });
         });
     </script>
-
-    <div class="container">
-        <div class="row">
-            <h1>Formulario de correo</h1>
-            <form id="form">
-                <div class="mb-3">
-                    <label class="form-label">Nombre</label>
-                    <input type="text" class="form-control" placeholder="Nombre" name="name">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Apellidos</label>
-                    <input type="text" class="form-control" placeholder="Nombre" name="lastName">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Telefono</label>
-                    <input type="text" class="form-control" placeholder="Nombre" name="phone">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Email</label>
-                    <input type="text" class="form-control" placeholder="Nombre" name="email">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Mensaje</label>
-                    <input type="text" class="form-control" placeholder="Nombre" name="message">
-                </div>
-                <button class="btn btn-primary" id="enviar" type="submit">Enviar datos</button>
-            </form>
-        </div>
-    </div>
-
-    
 </body>
 </html>
